New upstream version 2.11.1.3+dfsg